# ArtifactsMMO

./: .gitignore  pyproject.toml
frontend/: .gitignore  biome.json  index.html  package.json  vite.config.ts
frontend/scripts/: prebuild.py
frontend/src/: App.scss  App.tsx  constants.ts  main.tsx  routeTree.gen.ts  routes.tsx  types.ts  vite-env.d.ts
frontend/src/artifactsmmo-client/: client.ts  spec.d.ts
frontend/src/artifactsmmo-client/client/: context.ts  hooks.ts
frontend/src/artifactsmmo-client/hooks/: use-actions.ts  use-api-client.ts  use-bank-details.ts  use-bank-items.ts  use-character-effect.ts  use-character.ts  use-characters.ts  use-events.ts  use-grand-exchange.ts  use-item.ts  use-items.ts  use-map.ts  use-maps.ts  use-monster.ts  use-npc-items.ts  use-queuable-action.ts  use-resource.ts  use-simple-action.ts  use-status.ts
frontend/src/artifactsmmo-client/utils/: euclidean-distance.ts
frontend/src/components/action-card/: action-card.tsx
frontend/src/components/action-move-card/: action-move-card.tsx
frontend/src/components/action-queue-card/: action-queue-card.tsx
frontend/src/components/action-stack-card/: ActionStackCard.tsx
frontend/src/hooks/: use-accounts.ts  use-character-actions.ts  use-interval.ts  use-item-modal.ts  use-queuable-action.ts  use-simple-action.ts  use-stack.ts
frontend/src/pages/: no-account-page.tsx
frontend/src/routes/: $accountName.$characterName.index.tsx  $accountName.index.tsx  __root.tsx  index.tsx
frontend/src/utils/: euclidean-distance.ts  is-action-type.ts  stack.ts
(+43 files in other folders)
